改进页面导出样式

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,8 @@
     
     <div id="contextMenu">
         <ul>
-            <li data-action="download-page">下载当前页面</li>
+            <li data-action="download-page">下载当前页面（含数据）</li>
+            <li data-action="download-empty-page">下载空页面（无数据）</li>
             <li data-action="export-compressed">导出压缩版页面</li>
             <li data-action="export-video">导出视频</li>
         </ul>
